--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "js-cookie": "^3.0.1",
     "lottie-web": "^5.9.2",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.6"
